1. Implemented Detailed news functionality. 2. Updated app architecture to implement Search News functionality.
Signed-off-by: Harish <harish.vats33@gmail.com>

--- a/app/src/main/res/layout/fragment_detailed_news.xml
+++ b/app/src/main/res/layout/fragment_detailed_news.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".presentation.DetailedNewsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Detailed News Fragment" />
 
-</FrameLayout>
+    <WebView
+        android:id="@+id/info_web_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</LinearLayout>
