1. Implemented Save news usecase. 2. Implemented View and Delete news Usecase.
Signed-off-by: Harish <harish.vats33@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="8"
+        android:layout_weight="7"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph" />
 
@@ -21,5 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:background="@color/search_background"
+        app:itemIconTint="@color/list_text"
+        app:itemTextColor="@color/list_text"
         app:menu="@menu/bottom_menu" />
 </LinearLayout>
